--- a/eurika-start/pom.xml
+++ b/eurika-start/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
 
         <!-- slf4j and log4j -->
         <dependency>
