--- a/eurika-start/src/main/resources/eurika.properties
+++ b/eurika-start/src/main/resources/eurika.properties
@@ -1,2 +1,3 @@
-eurika.registry.address=127.0.0.1:1234
-eurika.registry.wait.millis=10000
+eurika.registry.address=127.0.0.1:2181
+eurika.registry.timeout.connection=10000
+eurika.registry.timeout.session=5000
