--- a/eurika-start/src/main/resources/log4j.properties
+++ b/eurika-start/src/main/resources/log4j.properties
@@ -7,5 +7,5 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 # console uses PatternLayout.
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.Target = System.out
-log4j.appender.console.Threshold = DEBUG
+log4j.appender.console.Threshold = INFO
 log4j.appender.console.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
