--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
         <guava.version>31.1-jre</guava.version>
         <guava.retrying.version>2.0.0</guava.retrying.version>
+        <junit.version>4.13.2</junit.version>
         <!-- internal dependencies version -->
         <eurika.common.version>1.0-SNAPSHOT</eurika.common.version>
         <eurika.registry.version>1.0-SNAPSHOT</eurika.registry.version>
@@ -63,6 +64,13 @@
                 <version>${spring.version}</version>
             </dependency>
 
+            <!-- junit -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
 
             <!-- lombok -->
             <dependency>
