--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </modules>
 
     <properties>
+        <!-- external dependencies versions -->
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring.version>5.2.22.RELEASE</spring.version>
@@ -33,13 +34,31 @@
         <netty.version>4.1.86.Final</netty.version>
         <gson.version>2.9.0</gson.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
-        <!-- internal dependencies version -->
+        <!-- maven plugin dependencies version -->
+        <maven.deploy.plugin.version>3.0.0</maven.deploy.plugin.version>
+        <!-- internal dependencies versions -->
         <eurika.common.version>1.0-SNAPSHOT</eurika.common.version>
         <eurika.registry.version>1.0-SNAPSHOT</eurika.registry.version>
         <eurika.provider.version>1.0-SNAPSHOT</eurika.provider.version>
         <eurika.consumer.version>1.0-SNAPSHOT</eurika.consumer.version>
         <eurika.test.version>1.0-SNAPSHOT</eurika.test.version>
+        <!-- specific specified values -->
+        <skip.deployment>true</skip.deployment> <!-- for each submodule, skip its deployment unless specified otherwise -->
     </properties>
+
+    <build>
+        <plugins>
+            <!-- maven deploy plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven.deploy.plugin.version}</version>
+                <configuration>
+                    <skip>${skip.deployment}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencyManagement>
         <dependencies>
@@ -203,8 +222,6 @@
                 <version>${javax.servlet.version}</version>
                 <scope>provided</scope>
             </dependency>
-
-
 
         </dependencies>
     </dependencyManagement>
