--- a/pom.xml
+++ b/pom.xml
@@ -34,31 +34,15 @@
         <netty.version>4.1.86.Final</netty.version>
         <gson.version>2.9.0</gson.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
-        <!-- maven plugin dependencies version -->
-        <maven.deploy.plugin.version>3.0.0</maven.deploy.plugin.version>
         <!-- internal dependencies versions -->
         <eurika.common.version>1.0-SNAPSHOT</eurika.common.version>
         <eurika.registry.version>1.0-SNAPSHOT</eurika.registry.version>
         <eurika.provider.version>1.0-SNAPSHOT</eurika.provider.version>
         <eurika.consumer.version>1.0-SNAPSHOT</eurika.consumer.version>
         <eurika.test.version>1.0-SNAPSHOT</eurika.test.version>
-        <!-- specific specified values -->
-        <skip.deployment>true</skip.deployment> <!-- for each submodule, skip its deployment unless specified otherwise -->
+        <eurika.start.version>1.0-SNAPSHOT</eurika.start.version>
     </properties>
 
-    <build>
-        <plugins>
-            <!-- maven deploy plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>${maven.deploy.plugin.version}</version>
-                <configuration>
-                    <skip>${skip.deployment}</skip>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencyManagement>
         <dependencies>
@@ -67,6 +51,12 @@
                 <groupId>com.jerryoops</groupId>
                 <artifactId>eurika-common</artifactId>
                 <version>${eurika.common.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.jerryoops</groupId>
+                <artifactId>eurika-start</artifactId>
+                <version>${eurika.start.version}</version>
             </dependency>
 
             <dependency>
