--- a/eurika-test/pom.xml
+++ b/eurika-test/pom.xml
@@ -52,18 +52,10 @@
             <artifactId>junit</artifactId>
         </dependency>
 
-        <!-- slf4j and log4j -->
+        <!-- slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
         </dependency>
 
         <!-- lombok -->
