added proxy for EurikaReference, not tested yet

--- a/eurika-start/pom.xml
+++ b/eurika-start/pom.xml
@@ -28,6 +28,10 @@
         </dependency>
         <dependency>
             <groupId>com.jerryoops</groupId>
+            <artifactId>eurika-consumer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.jerryoops</groupId>
             <artifactId>eurika-provider</artifactId>
         </dependency>
 
