--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <spring.version>5.2.22.RELEASE</spring.version>
         <lombok.version>1.18.24</lombok.version>
-        <curator.framework.version>2.13.0</curator.framework.version>
+        <curator.version>2.13.0</curator.version>
         <slf4j.version>1.7.30</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <hutool.version>5.7.17</hutool.version>
@@ -160,7 +160,13 @@
             <dependency>
                 <groupId>org.apache.curator</groupId>
                 <artifactId>curator-framework</artifactId>
-                <version>${curator.framework.version}</version>
+                <version>${curator.version}</version>
+            </dependency>
+            <!-- curator recipes -->
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-recipes</artifactId>
+                <version>${curator.version}</version>
             </dependency>
 
             <!-- slf4j -->
